--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,27 +16,16 @@
         </div>
         <form class="pt-3">
             <div class="uncompleted-tasks space-y-2">
-                <div class="group flex items-center ml-2">
-                    <input type="checkbox" id="1" name="" value="1" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
-                    <label for="1" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl">finish the to do app finish the to do app project</label>
-                    <svg class="mr-1 sm:mr-3 ml-1 sm:ml-auto sm:mt-1.5 opacity-0 group-hover:opacity-100 no-hover:opacity-100 hover:cursor-pointer w-4 h-4 sm:w-6 sm:h-6 fill-current text-gray-500 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
-                    </svg>
-                </div>
-                <div class="group flex items-center ml-2">
-                    <input type="checkbox" id="2" name="" value="1" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
-                    <label for="2" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl">finish the to do app finish the to do app project</label>
-                    <svg class="mr-1 sm:mr-3 ml-1 sm:ml-auto sm:mt-1.5 opacity-0 group-hover:opacity-100 no-hover:opacity-100 hover:cursor-pointer w-4 h-4 sm:w-6 sm:h-6 fill-current text-gray-500 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
-                    </svg>
-                </div>
-                <div class="group flex items-center ml-2">
-                    <input type="checkbox" id="3" name="" value="1" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
-                    <label for="3" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl">to do app project</label>
-                    <svg class="mr-1 sm:mr-3 ml-1 sm:ml-auto sm:mt-1.5 opacity-0 group-hover:opacity-100 no-hover:opacity-100 hover:cursor-pointer w-4 h-4 sm:w-6 sm:h-6 fill-current text-gray-500 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
-                    </svg>
-                </div>
+                <% todos.forEach(todoObj => { %>
+                    <div class="group flex items-center ml-2">
+                        <input type="checkbox" id="3" name="" value="1" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
+                        <label for="3" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl"><%= todoObj.todo %> </label>
+                        <svg class="mr-1 sm:mr-3 ml-1 sm:ml-auto sm:mt-1.5 opacity-0 group-hover:opacity-100 no-hover:opacity-100 hover:cursor-pointer w-4 h-4 sm:w-6 sm:h-6 fill-current text-gray-500 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+                        </svg>
+                    </div>
+                <% }) %>
+
                 <div class="group flex items-center ml-2">
                     <input type="checkbox" id="3" name="" value="1" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
                     <textarea name="" id="" rows="2" class="p-1 ml-2 sm:ml-3 text-lg leading-snug sm:text-3xl bg-transparent w-full mr-2 outline-none border-transparent focus:outline-none"></textarea>
