--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
         </form>
     </div>
 
+    <script src="js/ejs.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
