--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,15 @@
         <form class="pt-3">
             <div class="uncompleted-tasks space-y-2">
                 <% todos.forEach( (todoObj, index) => { %>
-                    <% id = todoObj.id; %> 
+                    <% id = todoObj.id; %>
+                    <% let checked = '' %> 
+                    <% if (todoObj.completed) { %>
+                        <% checked = 'checked' %> 
+                    <% } %>
+
                     <div class="group flex items-center ml-2">
-                        <input type="checkbox" id="<%= id %>" name="<%= id %>" value="<%= id %>" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5">
-                        <label for="<%= id %>" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl"><%= todoObj.todo %> </label>
+                        <input type="checkbox" id="<%= id %>" name="<%= id %>" value="<%= id %>" class="text-gray-500 w-6 h-6 rounded-md self-start sm:mt-1.5" <%= checked %>>
+                        <label for="<%= id %>" class="ml-2 sm:ml-3 checked-sibling:opacity-50 checked-sibling:line-through text-lg leading-snug sm:text-3xl"><%= todoObj.description %> </label>
                         <svg id="<%= id %>" class="mr-1 sm:mr-3 ml-1 sm:ml-auto sm:mt-1.5 opacity-0 group-hover:opacity-100 no-hover:opacity-100 hover:cursor-pointer w-4 h-4 sm:w-6 sm:h-6 fill-current text-gray-500 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                             <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
                         </svg>
